# docker-gui

./: .gitignore  AGENTS.md  README.md  angular.json  bitbucket-pipelines.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/: copilot-instructions.md
.github/prompts/: build-test-run.prompt.md
.github/skills/docker-gui-dev-cycle/: SKILL.md
.github/skills/docker-gui-dev-cycle/scripts/: dev-cycle.sh
.github/workflows/: ci.yml  windows-wsl-provisioning.yml
docs/: implementation.md
docs/ci/: windows-wsl-provisioning-ci.md
docs/plans/: README.md  architecture.md  mvp-features.md  platform-integration.md  tech-stack.md  ui-ux-design.md  windows-engine-provider-schema.md  windows-engine-provisioning-checklist.md  windows-engine-provisioning-state-machine.md  windows-engine-provisioning.md  windows-engine-ux-copy.md
infra/: windows-wsl-lab.bicep
scripts/: build-helper.mjs  dev-cycle.sh
scripts/ci/: run-windows-wsl-tests.ps1
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  engine.rs  error.rs  lib.rs  main.rs  registry.rs
src-tauri/src/commands/: compose.rs  containers.rs  engine.rs  images.rs  mod.rs  system.rs  volumes.rs
src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
src/app/components/: confirm-row.component.ts  toast-container.component.ts  toast.service.ts
src/app/lib/: log-stream.service.ts  models.ts  tauri.ts
src/app/stores/: connection.store.ts  log.store.ts  ui.store.ts
(+12 files in other folders)
