[package]
name = "docker-gui"
version = "0.1.0"
description = "A lightweight cross-platform Docker Desktop replacement"
authors = []
edition = "2021"
default-run = "docker-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "docker_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bollard = { version = "0.18", features = ["pipe"] }
futures-util = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sha2 = "0.10"

[features]
# this feature is used for production builds or when `devtools` feature is not enabled in Tauri
custom-protocol = ["tauri/custom-protocol"]
